--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,9 +1,279 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.pingan_us.pingan.ProfileActivity">
+    android:layout_height="match_parent">
+    <RelativeLayout
+        android:id="@+id/profile_login"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorBlack"
+            android:alpha="0.3">
+        </RelativeLayout>
+        <ScrollView
+            android:id="@+id/profile_scrollview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <RelativeLayout
+                    android:id="@+id/first_layer"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/profile_photo"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_marginTop="60dp"
+                        android:layout_centerHorizontal="true"
+                        android:src="@drawable/profileicon"/>
+                    <RelativeLayout
+                        android:id="@+id/name_layout"
+                        android:layout_below="@+id/profile_photo"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/pro_name_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Name"
+                            android:textSize="21dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorWhite" />
+                    </RelativeLayout>
 
+                    <RelativeLayout
+                        android:id="@+id/phone_layout"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/name_layout"
+                        android:layout_centerHorizontal="true"
+                        android:layout_marginBottom="15dp"
+                        android:layout_marginTop="10dp">
+                        <TextView
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:id="@+id/phone_title"
+                            android:text="Phone:"
+                            android:textSize="18dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorWhite" />
+
+                        <TextView
+                            android:id="@+id/pro_phone_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignTop="@+id/phone_title"
+                            android:layout_alignBottom="@+id/phone_title"
+                            android:layout_toRightOf="@+id/phone_title"
+                            android:textSize="18dp"
+                            android:textStyle="bold"
+                            android:textColor="@color/colorWhite"/>
+                    </RelativeLayout>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/second_layer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/first_layer">
+
+                    <RelativeLayout
+                        android:id="@+id/entire_policy_section"
+                        android:layout_width="match_parent"
+                        android:layout_height="350dp"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:background="@color/colorWhite">
+                        <RelativeLayout
+                            android:id="@+id/profile_policy_section"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                            <RelativeLayout
+                                android:id="@+id/policy_section"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_margin="10dp">
+                                <TextView
+                                    android:id="@+id/id_section_title"
+                                    android:layout_height="wrap_content"
+                                    android:layout_width="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginTop="50dp"
+                                    android:textSize="30dp"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/colorBlack"
+                                    android:text="Your ID"/>
+                            </RelativeLayout>
+                            <ImageSwitcher
+                                android:id="@+id/policy_switch"
+                                android:layout_width="250dp"
+                                android:layout_height="140dp"
+                                android:background="@drawable/cycle"
+                                android:layout_below="@+id/policy_section"
+                                android:layout_centerHorizontal="true"
+                                android:layout_marginTop="10dp"
+                                android:layout_marginBottom="10dp">
+                            </ImageSwitcher>
+                            <Button
+                                android:id="@+id/policy_add_button"
+                                android:layout_width="150dp"
+                                android:layout_height="45dp"
+                                android:layout_margin="10dp"
+                                android:layout_centerHorizontal="true"
+                                android:layout_below="@+id/policy_switch"
+                                android:background="@drawable/btn_background"
+                                android:text="Edit your ID"
+                                android:textSize="15dp"
+                                android:textColor="@color/colorBlack"
+                                android:scaleType="fitCenter"/>
+                        </RelativeLayout>
+                    </RelativeLayout>
+                    <View
+                        android:layout_below="@+id/entire_policy_section"
+                        android:layout_width="match_parent"
+                        android:layout_height="2dp"
+                        android:background="@color/colorBrightGreen"/>
+                    <RelativeLayout
+                        android:id="@+id/entire_vehicle_section"
+                        android:layout_marginTop="1dp"
+                        android:layout_height="350dp"
+                        android:layout_width="match_parent"
+                        android:layout_below="@+id/entire_policy_section"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true"
+                        android:background="@color/colorWhite">
+                        <RelativeLayout
+                            android:id="@+id/profile_vehicle_section"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                            <RelativeLayout
+                                android:id="@+id/vehicle_section"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerHorizontal="true"
+                                android:layout_margin="10dp">
+                                <TextView
+                                    android:id="@+id/vehicle_section_title"
+                                    android:layout_height="wrap_content"
+                                    android:layout_width="wrap_content"
+                                    android:layout_centerVertical="true"
+                                    android:layout_centerHorizontal="true"
+                                    android:layout_marginTop="50dp"
+                                    android:textSize="30dp"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/colorBlack"
+                                    android:text="Your vehicles"/>
+                            </RelativeLayout>
+
+
+                        </RelativeLayout>
+
+                    </RelativeLayout>
+                    <Button
+                        android:id="@+id/profile_logout_button"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/entire_vehicle_section"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginTop="20dp"
+                        android:background="@color/colorRed"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="25dp"
+                        android:text="Log out"/>
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+        </ScrollView>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/profile_logout"
+        android:visibility="invisible"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/launch"/>
+        <TextView
+            android:id="@+id/login_indicate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="Please Sign in first"
+            android:textSize="30dp"
+            android:textColor="@color/colorPrimary"/>
+        <Button
+            android:id="@+id/login_nav"
+            android:layout_below="@+id/login_indicate"
+            android:layout_width="148dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="  login  "
+            android:layout_centerHorizontal="true"
+            android:textSize="20dp"
+            android:onClick="onLogin"
+            android:background="@drawable/btn_background"
+            android:alpha="0.6"/>
+        <TextView
+            android:id="@+id/register_indicate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/login_nav"
+            android:text="New User? Register here!"
+            android:textSize="25dp"
+            android:textColor="@color/colorPrimary"/>
+        <Button
+            android:id="@+id/register_nav"
+            android:layout_below="@+id/register_indicate"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="148dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="16dp"
+            android:text="Regester"
+            android:layout_centerHorizontal="true"
+            android:alpha="0.6"
+            android:background="@drawable/btn_background" />
+    </RelativeLayout>
+
+<!--
+    <RelativeLayout
+        android:id="@+id/profile_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorBlack"
+        android:alpha="0">
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/profile_progressBar"
+            android:progressDrawable="@drawable/circular_progress_bar"/>
+    </RelativeLayout>-->
 </RelativeLayout>
+
