--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -15,18 +15,39 @@
             <RelativeLayout
                 android:id="@+id/news_section"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp">
                 <ImageSwitcher
                     android:id="@+id/home_switcher"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="200dp"
+                    android:layout_marginBottom="40dp"
+                    android:layout_marginTop="10dp">
                 </ImageSwitcher>
-
+                <TextView
+                    android:id="@+id/slide_title"
+                    android:layout_below="@+id/home_switcher"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:textSize="15dp"
+                    android:textColor="@color/colorPrimary"
+                    android:text="No Internect Connection"
+                    android:layout_margin="5dp"/>
             </RelativeLayout>
+            <LinearLayout
+                android:layout_below="@id/news_section"
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="@color/colorBrightGray">
+            </LinearLayout>
             <GridLayout
                 android:id="@+id/home_grid"
+                android:layout_below="@+id/news_section"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:columnCount="3">
                 <RelativeLayout
                     android:id="@+id/health_btn"
@@ -49,12 +70,19 @@
                         android:layout_margin="5dp"
                         android:layout_centerHorizontal="true"
                         android:textColor="@color/colorBlack" />
+
                 </RelativeLayout>
                 <RelativeLayout
                     android:id="@+id/car_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_columnWeight="1">
+                    <LinearLayout
+                        android:layout_alignParentLeft="true"
+                        android:layout_width="1dp"
+                        android:layout_height="80dp"
+                        android:gravity="center_vertical"
+                        android:background="@color/colorGray"/>
                     <ImageView
                         android:id="@+id/car_icon"
                         android:layout_width="40dp"
@@ -77,6 +105,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_columnWeight="1">
+                    <LinearLayout
+                        android:layout_alignParentLeft="true"
+                        android:gravity="center_vertical"
+                        android:layout_width="1dp"
+                        android:layout_height="80dp"
+                        android:background="@color/colorGray"/>
                     <ImageView
                         android:id="@+id/property_icon"
                         android:layout_width="40dp"
@@ -106,10 +140,202 @@
                 android:orientation="vertical">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="1dp"
+                    android:layout_height="2dp"
                     android:layout_margin="15dp"
                     android:background="@color/colorGray">
                 </LinearLayout>
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:text="Our Services"
+                    android:textStyle="bold"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="20dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_margin="20dp">
+
+                    <RelativeLayout
+                        android:id="@+id/auto_section"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/auto_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Auto Insurance"
+                            android:layout_margin="5dp"
+                            android:textSize="15dp"
+                            android:textColor="@color/colorPrimaryDark"/>
+                        <ImageButton
+                            android:id="@+id/auto_learnmore"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentRight="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/next"
+                            />
+                        <ImageView
+                            android:id="@+id/auto_image"
+                            android:layout_below="@+id/auto_title"
+                            android:layout_width="180dp"
+                            android:layout_height="150dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/auto"/>
+                        <TextView
+                            android:layout_toRightOf="@+id/auto_image"
+                            android:layout_alignTop="@+id/auto_image"
+                            android:layout_marginLeft="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="15dp"
+                            android:text="We offer a complete line of quality coverages for your personal automobiles and commercial vehicles at prices you can afford."/>
+                    </RelativeLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="15dp"
+                        android:background="@color/colorGray">
+                    </LinearLayout>
+                    <RelativeLayout
+                        android:id="@+id/house_section"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/house_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:text="Home Insurance"
+                            android:textSize="15dp"
+                            android:textColor="@color/colorPrimaryDark"/>
+                        <ImageButton
+                            android:id="@+id/house_learnmore"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentRight="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/next"
+                            />
+                        <ImageView
+                            android:id="@+id/house_image"
+                            android:layout_below="@+id/house_title"
+                            android:layout_width="180dp"
+                            android:layout_height="150dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/house"/>
+                        <TextView
+                            android:layout_toRightOf="@+id/house_image"
+                            android:layout_alignTop="@+id/house_image"
+                            android:layout_marginLeft="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="15dp"
+                            android:text="We offer homeowners insurance that can give you the peace of mind. If disaster strikes, you will be protected."/>
+                    </RelativeLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="15dp"
+                        android:background="@color/colorGray">
+                    </LinearLayout>
+                    <RelativeLayout
+                        android:id="@+id/Health_section"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/health_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:text="Health Insurance"
+                            android:textSize="15dp"
+                            android:textColor="@color/colorPrimaryDark"/>
+                        <ImageButton
+                            android:id="@+id/health_learnmore"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentRight="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/next"
+                            />
+                        <ImageView
+                            android:id="@+id/health_image"
+                            android:layout_below="@+id/health_title"
+                            android:layout_width="180dp"
+                            android:layout_height="150dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/family"/>
+                        <TextView
+                            android:layout_toRightOf="@+id/health_image"
+                            android:layout_alignTop="@+id/health_image"
+                            android:layout_marginLeft="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="15dp"
+                            android:text="We offer a wide range of health insurance policies helping you and your family against the risk of incurring medical expenses."/>
+                    </RelativeLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_margin="15dp"
+                        android:background="@color/colorGray">
+                    </LinearLayout>
+                    <RelativeLayout
+                        android:id="@+id/business_section"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                        <TextView
+                            android:id="@+id/business_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:text="Business Insurance"
+                            android:textSize="15dp"
+                            android:textColor="@color/colorPrimaryDark"/>
+                        <ImageButton
+                            android:id="@+id/business_learnmore"
+                            android:layout_width="60dp"
+                            android:layout_height="30dp"
+                            android:layout_alignParentRight="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/next"
+                            />
+                        <ImageView
+                            android:id="@+id/business_image"
+                            android:layout_below="@+id/business_title"
+                            android:layout_width="180dp"
+                            android:layout_height="150dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/business"/>
+                        <TextView
+                            android:layout_toRightOf="@+id/business_image"
+                            android:layout_alignTop="@+id/business_image"
+                            android:layout_marginLeft="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="15dp"
+                            android:text="What is the right coverage for you and your business? The type of coverage you need depends on a number of factors."/>
+                    </RelativeLayout>
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_margin="15dp"
+                    android:background="@color/colorGray">
+                </LinearLayout>
+
                 <LinearLayout
                     android:id="@+id/carrier_btn"
                     android:layout_width="wrap_content"
