--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorGray">#B9B9B9</color>
+    <color name="colorBrightGray">#cbc9c9</color>
     <color name="colorRed">#f72a05</color>
     <color name="transparent">#00000000</color>
     <color name="colorBrightGreen">#74F7A0</color>
