--- a/app/src/main/res/layout/activity_discovery.xml
+++ b/app/src/main/res/layout/activity_discovery.xml
@@ -5,5 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.pingan_us.pingan.DiscoveryActivity">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="Coming Soon!"
+        android:textSize="45dp"
+        android:textStyle="bold|italic"/>
 
 </RelativeLayout>
