--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/launch"/>
+                    android:src="@drawable/pinganbkg"/>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
